<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:style="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:gravity="center">

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:id="@+id/largefloatwindowLinearLayout1">

		<com.firesend.view.StyleButton
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			style:text="@string/window_name"
			style:text_size="25"
			android:id="@+id/largefloatwindowStyleButton1"/>

		<com.firesend.view.StyleButton
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			style:text="@string/send_count"
			style:text_size="25"
			style:rX="0"
			style:rY="0"
			android:id="@+id/largefloatwindowStyleButton2"/>

	</LinearLayout>

	<com.firesend.view.StyleButton
		android:layout_height="30dip"
		android:layout_width="match_parent"
		style:text="@string/edit_regular"
		style:text_size="45"
		style:rX="0"
		style:rY="0"
		android:id="@+id/largefloatwindowStyleButton3"/>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal"
		android:gravity="center">

		<com.firesend.view.StyleButton
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			style:text="@string/stop_service"
			style:text_size="40"
			android:layout_weight="1.0"
			android:id="@+id/largefloatwindowStyleButton4"/>

		<com.firesend.view.StyleButton
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			style:text="@string/reset"
			style:text_size="40"
			android:layout_weight="1.0"
			android:id="@+id/largefloatwindowStyleButton5"/>

	</LinearLayout>

</LinearLayout>

