<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:gravity="center">

	<TextView
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:textSize="20sp"
		android:padding="10dp"
		android:id="@+id/regulardialogTextView1"/>

	<View
		android:layout_height="1dp"
		android:background="?android:attr/dividerVertical"
		android:layout_width="match_parent"/>

	<EditText
		android:layout_height="wrap_content"
		android:ems="12"
		android:layout_width="match_parent"
		android:maxLines="5"
		android:layout_marginBottom="10dp"
		android:id="@+id/regulardialogEditText1"
		android:layout_marginLeft="3dp"
		android:layout_marginRight="3dp"/>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:layout_marginLeft="3dp"
		android:layout_marginRight="3dp"
		android:gravity="center_vertical|start">

		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:id="@+id/regulardialogTextView2"/>

		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:id="@+id/regulardialogTextView3"/>

		<SeekBar
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:id="@+id/regulardialogSeekBar1"
			style="@style/AppTheme"/>

	</LinearLayout>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal"
		android:layout_marginBottom="10dp"
		android:layout_marginLeft="3dp"
		android:layout_marginRight="3dp"
		android:gravity="center|start">

		<TextView
			android:layout_height="wrap_content"
			android:text="@string/rule"
			android:layout_width="wrap_content"/>

		<RadioGroup
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:id="@+id/regulardialogRadioGroup1">

			<RadioButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/ms"
				android:checked="true"
				android:id="@+id/regulardialogRadioButton1"/>

			<RadioButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/s"
				android:id="@+id/regulardialogRadioButton2"/>

			<RadioButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/min"
				android:id="@+id/regulardialogRadioButton3"/>

		</RadioGroup>

	</LinearLayout>

	<View
		android:layout_height="1dp"
		android:background="?android:attr/dividerVertical"
		android:layout_width="match_parent"/>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal">

		<Button
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:id="@+id/regulardialogButton1"
			android:layout_weight="1.0"/>

		<View
			android:layout_height="match_parent"
			android:background="?android:attr/dividerHorizontal"
			android:layout_width="1dp"/>

		<Button
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:id="@+id/regulardialogButton2"
			android:layout_weight="1.0"/>

	</LinearLayout>

</LinearLayout>

