<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:style="http://schemas.android.com/apk/res-auto"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	android:id="@+id/splashRelativeLayout1"
	android:background="#666666"
	android:gravity="center_horizontal">

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:layout_alignParentBottom="true"
		android:gravity="center_horizontal"
		android:id="@+id/splashLinearLayout1">

		<com.firesend.view.StyleTextView
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:layout_centerHorizontal="true"
			style:text="@string/app_name"
			style:text_size="70"
			style:text_color="#000000"
			style:bgcolor_0="#1E000000"
			style:rect_paddingL="0"
			style:rect_paddingT="0"
			style:rect_paddingR="0"
			style:rect_paddingB="0"
			style:rect_out_style="false"
			style:text_out_style="true"
			style:rect_stroke_width="0.1"
			style:text_stroke_width="1.5"
			style:mask_style="blur"
			style:blur_mode="outer"
			style:blur_mask_width="2.0"
			android:id="@+id/splashStyleTextView5"/>

		<com.firesend.view.StyleTextView
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:layout_centerHorizontal="true"
			style:text="@string/declare"
			style:text_size="38"
			style:text_color="#000000"
			style:bgcolor_0="#1EFFFFFF"
			style:rect_paddingL="0"
			style:rect_paddingT="1"
			style:rect_paddingR="0"
			style:rect_paddingB="1"
			style:rect_out_style="false"
			style:text_out_style="true"
			style:rect_stroke_width="1"
			style:text_stroke_width="0.5"
			style:mask_style="blur"
			style:blur_mode="outer"
			style:blur_mask_width="1.0"
			android:id="@+id/splashStyleTextView6"/>

	</LinearLayout>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:gravity="center"
		android:id="@+id/splashLinearLayout2"
		android:layout_marginBottom="10dp"
		android:layout_centerInParent="true"
		android:visibility="gone">

		<com.firesend.view.StyleTextView
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			style:text="@string/style_text0"
			style:text_size="60"
			style:text_color="#000000"
			style:bgcolor_0="#FFFFFF"
			style:bgcolor_1="#000000"
			style:rect_paddingL="-1"
			style:rect_paddingT="-1"
			style:rect_paddingR="-1"
			style:rect_paddingB="-1"
			style:rect_out_style="false"
			style:text_out_style="true"
			style:rect_stroke_width="1"
			style:text_stroke_width="0.3"
			style:mask_style="emboss"
			style:blur_mode="outer"
			style:blur_mask_width="1.0"
			android:layout_marginBottom="20dp"
			android:id="@+id/splashStyleTextView1"
			android:visibility="invisible"/>

		<com.firesend.view.StyleTextView
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			style:text="@string/style_text1"
			style:text_size="45"
			style:text_color="#000000"
			style:bgcolor_0="#FFFFFF"
			style:bgcolor_1="#000000"
			style:rect_paddingL="10"
			style:rect_paddingT="10"
			style:rect_paddingR="10"
			style:rect_paddingB="10"
			style:rect_out_style="false"
			style:text_out_style="true"
			style:rect_stroke_width="1"
			style:text_stroke_width="0.3"
			style:mask_style="emboss"
			style:blur_mode="outer"
			style:blur_mask_width="1.0"
			android:layout_marginBottom="20dp"
			android:id="@+id/splashStyleTextView2"
			android:visibility="invisible"/>

		<com.firesend.view.StyleTextView
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			style:text="@string/style_text2"
			style:text_size="90"
			style:text_color="#000000"
			style:bgcolor_0="#FFFFFF"
			style:bgcolor_1="#000000"
			style:rect_paddingL="10"
			style:rect_paddingT="10"
			style:rect_paddingR="10"
			style:rect_paddingB="10"
			style:rect_out_style="false"
			style:text_out_style="true"
			style:rect_stroke_width="1"
			style:text_stroke_width="0.3"
			style:mask_style="emboss"
			style:blur_mode="outer"
			style:blur_mask_width="1.0"
			android:layout_marginBottom="20dp"
			android:id="@+id/splashStyleTextView3"
			android:visibility="invisible"/>

		<com.firesend.view.StyleTextView
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			style:text="@string/style_text3"
			style:text_size="82"
			style:text_color="#000000"
			style:bgcolor_0="#FFFFFF"
			style:bgcolor_1="#000000"
			style:rect_paddingL="10"
			style:rect_paddingT="10"
			style:rect_paddingR="10"
			style:rect_paddingB="10"
			style:rect_out_style="false"
			style:text_out_style="true"
			style:rect_stroke_width="1"
			style:text_stroke_width="0.3"
			style:mask_style="emboss"
			style:blur_mode="outer"
			style:blur_mask_width="1.0"
			android:id="@+id/splashStyleTextView4"
			android:visibility="invisible"/>

	</LinearLayout>

	<TextView
		android:layout_height="wrap_content"
		android:text="O_o:随用即发，岂止于刷屏！"
		android:layout_width="match_parent"
		android:layout_below="@id/splashLinearLayout2"
		android:gravity="center_horizontal"
		android:id="@+id/splashTextView1"
		android:visibility="visible"
		android:background="#FF0000"
		android:layout_centerInParent="true"
		android:textSize="18sp"
		android:textColor="#3C3C3C"/>

	<ImageView
		android:layout_height="100dp"
		android:layout_width="100dp"
		android:src="@drawable/logo1"
		android:layout_above="@id/splashLinearLayout2"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="150dp"/>

</RelativeLayout>

